[gd_scene load_steps=10 format=3 uid="uid://3q08rw4x5d0m"]

[ext_resource type="Texture2D" uid="uid://bd3hb2fe0k5lp" path="res://Scenes/kami_scenes/kami_assetss/button_idle.png" id="1_txkj5"]
[ext_resource type="Texture2D" uid="uid://cuwfn7h0air3x" path="res://Scenes/kami_scenes/kami_assetss/button_pressed.png" id="2_de6p3"]
[ext_resource type="Texture2D" uid="uid://4uek3kksutx6" path="res://Scenes/kami_scenes/kami_assetss/button_hovered.png" id="3_h6ewy"]
[ext_resource type="Script" path="res://Scenes/kami_scenes/button_scene.gd" id="4_2rivj"]
[ext_resource type="Texture2D" uid="uid://bx0pda6mp0rd3" path="res://Scenes/kami_scenes/kami_assetss/button_disabled.png" id="4_xsthm"]
[ext_resource type="Texture2D" uid="uid://dxd4wvamh4cy8" path="res://Scenes/kami_scenes/kami_assetss/hover_background.png" id="5_5e0ug"]
[ext_resource type="Texture2D" uid="uid://b65kbaenawyg" path="res://Scenes/kami_scenes/kami_assetss/test_text.png" id="6_67hdh"]

[sub_resource type="Curve" id="Curve_wvbxm"]
max_value = 100.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.973684, 15.3846), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_7vtm0"]
offsets = PackedFloat32Array(0.314815, 0.537037, 0.654321)
colors = PackedColorArray(0, 0, 0, 1, 0.911111, 0.911111, 0.911111, 1, 1, 1, 1, 1)

[node name="Button" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -942.0
offset_bottom = -558.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(110, 45)
texture_normal = ExtResource("1_txkj5")
texture_pressed = ExtResource("2_de6p3")
texture_hover = ExtResource("3_h6ewy")
texture_disabled = ExtResource("4_xsthm")
script = ExtResource("4_2rivj")

[node name="hover" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_5e0ug")

[node name="Info" type="Sprite2D" parent="."]
position = Vector2(102, 46)
texture = ExtResource("6_67hdh")

[node name="emitter" type="CPUParticles2D" parent="."]
position = Vector2(74, 39)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
explosiveness = 0.89
local_coords = true
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 209.6
initial_velocity_max = 239.9
damping_min = 100.0
damping_max = 100.0
damping_curve = SubResource("Curve_wvbxm")
color_ramp = SubResource("Gradient_7vtm0")

[node name="sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_exited" from="hover" to="." method="_on_hover_mouse_exited"]
